--- a/Libros/Libro1/tutorial.html
+++ b/Libros/Libro1/tutorial.html
@@ -461,7 +461,7 @@ title="Print to PDF"
         <div class="col pl-md-3 pl-lg-5 content-container">
             <!-- Table of contents that is only displayed when printing the page -->
             <div id="jb-print-docs-body" class="onlyprint">
-                <h1><span style="color:#F72585">Bienvenido(a)</span></h1>
+                <h1><span style="color:#F72585">Bienvenidos(a)</span></h1>
                 <!-- Table of contents -->
                 <div id="print-main-content">
                     <div id="jb-print-toc">
